--- a/p8105_hw6_yl4358.Rmd
+++ b/p8105_hw6_yl4358.Rmd
@@ -27,3 +27,18 @@ scale_fill_discrete = scale_fill_viridis_d
 theme_set(theme_minimal() + theme_bw() + theme(legend.position = "bottom"))
 ```
 
+# Problem 1
+
+```{r}
+birthweight_df = 
+  read_csv("./data/birthweight.csv") %>% 
+  janitor::clean_names() %>% 
+  mutate(
+    babysex = factor(babysex, levels = c(1, 2), labels = c("male", "female"), ordered = TRUE),
+    frace = factor(frace, levels = c(1,2,3,4,8,9), labels = c("white", "black","asian","puerto_rican","other","unknown"), ordered = TRUE),
+    malform = factor(malform, levels = c(0,1), labels = c("absent", "present"), ordered = TRUE),
+    mrace = factor(mrace, levels = c(1,2,3,4,9), labels = c("white", "black","asian","puerto_rican","other"), ordered = TRUE)
+  ) %>% 
+  drop_na()
+```
+
