--- a/p8105_hw6_yl4358.md
+++ b/p8105_hw6_yl4358.md
@@ -3,4 +3,24 @@ p8105\_hw6\_yl4358
 YI LIU
 11/21/2019
 
+# Problem 1
 
+``` r
+birthweight_df = 
+  read_csv("./data/birthweight.csv") %>% 
+  janitor::clean_names() %>% 
+  mutate(
+    babysex = factor(babysex, levels = c(1, 2), labels = c("male", "female"), ordered = TRUE),
+    frace = factor(frace, levels = c(1,2,3,4,8,9), labels = c("white", "black","asian","puerto_rican","other","unknown"), ordered = TRUE),
+    malform = factor(malform, levels = c(0,1), labels = c("absent", "present"), ordered = TRUE),
+    mrace = factor(mrace, levels = c(1,2,3,4,9), labels = c("white", "black","asian","puerto_rican","other"), ordered = TRUE)
+  ) %>% 
+  drop_na()
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   .default = col_double()
+    ## )
+
+    ## See spec(...) for full column specifications.
