fit a linear model for data available

--- a/p8105_hw6_yl4358.md
+++ b/p8105_hw6_yl4358.md
@@ -24,3 +24,50 @@ birthweight_df =
     ## )
 
     ## See spec(...) for full column specifications.
+
+``` r
+my_fit = lm(bwt ~ blength + delwt + smoken, data = birthweight_df)
+summary(my_fit)
+```
+
+    ## 
+    ## Call:
+    ## lm(formula = bwt ~ blength + delwt + smoken, data = birthweight_df)
+    ## 
+    ## Residuals:
+    ##     Min      1Q  Median      3Q     Max 
+    ## -1716.5  -217.3    -3.9   211.7  4300.4 
+    ## 
+    ## Coefficients:
+    ##               Estimate Std. Error t value Pr(>|t|)    
+    ## (Intercept) -3963.0662    94.6286 -41.880  < 2e-16 ***
+    ## blength       133.9318     1.9328  69.292  < 2e-16 ***
+    ## delwt           2.9149     0.2368  12.310  < 2e-16 ***
+    ## smoken         -2.4221     0.6925  -3.497 0.000474 ***
+    ## ---
+    ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+    ## 
+    ## Residual standard error: 336.5 on 4338 degrees of freedom
+    ## Multiple R-squared:  0.5685, Adjusted R-squared:  0.5682 
+    ## F-statistic:  1905 on 3 and 4338 DF,  p-value: < 2.2e-16
+
+I choose baby’s length at birth(`blength`), mother’s weight at
+delivery(`delwt`) and average number of cigarettes(`smoken`) smoked per
+day during pregnancy as predictor variables. Because baby’s birth weight
+is highly related with the mother’s health status, I choose `delwt` and
+`smoken` which represents mother’s health status during pregnancy.
+According to common sense, the taller the baby is , the heavier the baby
+is, thus I also choose `blength`.
+
+``` r
+birthweight_df %>% 
+  modelr::add_residuals(my_fit) %>% 
+  modelr::add_predictions(my_fit) %>% 
+  ggplot(aes(x = pred, y = resid)) + geom_point(alpha=.4 ) +
+  stat_smooth(method = "lm")
+```
+
+<img src="p8105_hw6_yl4358_files/figure-gfm/unnamed-chunk-2-1.png" width="90%" />
+
+According to the plot, the residuals of this model have an average about
+0 and constant variance.
