--- a/p8105_hw6_yl4358.Rmd
+++ b/p8105_hw6_yl4358.Rmd
@@ -40,5 +40,21 @@ birthweight_df =
     mrace = factor(mrace, levels = c(1,2,3,4,9), labels = c("white", "black","asian","puerto_rican","other"), ordered = TRUE)
   ) %>% 
   drop_na()
+
+my_fit = lm(bwt ~ blength + delwt + smoken, data = birthweight_df)
+summary(my_fit)
+
 ```
 
+  I choose baby's length at birth(`blength`), mother's weight at delivery(`delwt`) and average number of cigarettes(`smoken`) smoked per day during pregnancy as predictor variables. Because baby's birth weight is highly related with the mother's health status, I choose `delwt` and `smoken` which represents mother's health status during pregnancy. According to common sense, the taller the baby is , the heavier the baby is, thus I also choose `blength`.
+
+
+```{r}
+birthweight_df %>% 
+  modelr::add_residuals(my_fit) %>% 
+  modelr::add_predictions(my_fit) %>% 
+  ggplot(aes(x = pred, y = resid)) + geom_point(alpha=.4 ) +
+  stat_smooth(method = "lm")
+```
+
+According to the plot, the residuals of this model have an average about 0 and constant variance.
