--- a/p8105_hw6_yl4358.md
+++ b/p8105_hw6_yl4358.md
@@ -71,3 +71,37 @@ birthweight_df %>%
 
 According to the plot, the residuals of this model have an average about
 0 and constant variance.
+
+``` r
+fit1 = lm(bwt ~ blength + gaweeks, data = birthweight_df)
+
+fit2 = lm(bwt ~ bhead * blength * babysex, data = birthweight_df)
+
+cv_df = 
+  crossv_mc(birthweight_df, 100) %>% 
+  mutate(
+    train = map(train, as_tibble),
+    test = map(test, as_tibble)) %>% 
+  mutate(my_fit  = map(train, ~lm(bwt ~ blength + delwt + smoken, data = .x)),
+         fit1  = map(train, ~lm(bwt ~ blength + gaweeks, data = .x)),
+         fit2  = map(train, ~lm(bwt ~ bhead * blength * babysex, data = .x))) %>% 
+  mutate(rmse_my_fit = map2_dbl(my_fit, test, ~rmse(model = .x, data = .y)),
+         rmse_fit1 = map2_dbl(fit1, test, ~rmse(model = .x, data = .y)),
+         rmse_fit2 = map2_dbl(fit2, test, ~rmse(model = .x, data = .y)))
+
+
+cv_df %>% 
+  select(starts_with("rmse")) %>% 
+  pivot_longer(
+    everything(),
+    names_to = "model", 
+    values_to = "rmse",
+    names_prefix = "rmse_") %>% 
+  mutate(model = fct_inorder(model)) %>% 
+  ggplot(aes(x = model, y = rmse)) + geom_violin()
+```
+
+<img src="p8105_hw6_yl4358_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
+Accordint to the `rmse`, the model using head circumference, length,sex
+and all interactions is the best, the model using length at birth and
+gestational age is the next, and my fitting model is the worse.
