--- a/p8105_hw6_yl4358.Rmd
+++ b/p8105_hw6_yl4358.Rmd
@@ -90,4 +90,19 @@ cv_df %>%
 Accordint to the `rmse`, the model using head circumference, length,sex and all interactions is the best, the model using length at birth and gestational age is the next, and my fitting model is the worse.
 
 
+# Problem 2
+
+```{r}
+weather_df = 
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2017-01-01",
+    date_max = "2017-12-31") %>%
+  mutate(
+    name = recode(id, USW00094728 = "CentralPark_NY"),
+    tmin = tmin / 10,
+    tmax = tmax / 10) %>%
+  select(name, id, everything())
+```
 
