plot the distribution of two quantitiles estimated

--- a/p8105_hw6_yl4358.md
+++ b/p8105_hw6_yl4358.md
@@ -135,3 +135,52 @@ weather_df =
     ## file last updated:  2019-09-03 22:06:28
 
     ## file min/max dates: 1869-01-01 / 2019-09-30
+
+``` r
+clean_df = 
+weather_df %>% 
+  modelr::bootstrap(n = 5000) %>%
+  mutate(
+    models = map(strap, ~ lm(tmax ~ tmin, data = .x)),
+    results1 = map(models, broom::tidy),
+    results2 = map(models, broom::glance)) %>% 
+  select(results1, results2) %>% 
+  unnest(results2) %>% 
+  select(results1,r.squared) %>% 
+  unnest(results1) %>% 
+  select(term, estimate, r.squared) %>% 
+  pivot_wider(
+    names_from = "term",
+    values_from = "estimate"
+  ) %>% 
+  janitor::clean_names() %>% 
+  mutate(
+    log_beta12 = log(intercept*tmin)
+  ) %>% 
+  select(r_squared, log_beta12)
+
+r_squared_plot = 
+  clean_df %>% 
+  ggplot(aes(x = r_squared)) +
+  geom_density()+
+  labs(
+    title = " The distribution of r squared"
+  )
+
+log_beta12_plot = 
+  clean_df %>% 
+  ggplot(aes(x = log_beta12)) +
+  geom_density()+
+  labs(
+    x = "log(beta1*beta0)",
+    title = " The distribution of log(beta1*beta0)"
+  )
+
+r_squared_plot + log_beta12_plot
+```
+
+<img src="p8105_hw6_yl4358_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
+
+According to the distribution plots above, two quantities estimated are
+almost normally distributed, and the average of estimated r squared and
+log(beta1\*beta0\` is about 0.91 and 2.02 respectively.
