--- a/p8105_hw6_yl4358.Rmd
+++ b/p8105_hw6_yl4358.Rmd
@@ -10,6 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(modelr)
 library(mgcv)
+library(patchwork)
 knitr::opts_chunk$set(
   fig.width = 6,
   fig.asp = .6,
@@ -105,4 +106,48 @@ weather_df =
     tmax = tmax / 10) %>%
   select(name, id, everything())
 ```
+```{r}
+clean_df = 
+weather_df %>% 
+  modelr::bootstrap(n = 5000) %>%
+  mutate(
+    models = map(strap, ~ lm(tmax ~ tmin, data = .x)),
+    results1 = map(models, broom::tidy),
+    results2 = map(models, broom::glance)) %>% 
+  select(results1, results2) %>% 
+  unnest(results2) %>% 
+  select(results1,r.squared) %>% 
+  unnest(results1) %>% 
+  select(term, estimate, r.squared) %>% 
+  pivot_wider(
+    names_from = "term",
+    values_from = "estimate"
+  ) %>% 
+  janitor::clean_names() %>% 
+  mutate(
+    log_beta12 = log(intercept*tmin)
+  ) %>% 
+  select(r_squared, log_beta12)
+
+r_squared_plot = 
+  clean_df %>% 
+  ggplot(aes(x = r_squared)) +
+  geom_density()+
+  labs(
+    title = " The distribution of r squared"
+  )
+
+log_beta12_plot = 
+  clean_df %>% 
+  ggplot(aes(x = log_beta12)) +
+  geom_density()+
+  labs(
+    x = "log(beta1*beta0)",
+    title = " The distribution of log(beta1*beta0)"
+  )
+
+r_squared_plot + log_beta12_plot
+```
+
+According to the distribution plots above, two quantities estimated are almost normally distributed, and the average of estimated r squared and log(beta1*beta0` is about 0.91 and 2.02 respectively.
 
