--- a/p8105_hw6_yl4358.md
+++ b/p8105_hw6_yl4358.md
@@ -173,7 +173,7 @@ log_beta12_plot =
   geom_density()+
   labs(
     x = "log(beta1*beta0)",
-    title = " The distribution of log(beta1*beta0)"
+    title = " The distribution of \n log(beta1*beta0)"
   )
 
 r_squared_plot + log_beta12_plot
@@ -184,3 +184,22 @@ r_squared_plot + log_beta12_plot
 According to the distribution plots above, two quantities estimated are
 almost normally distributed, and the average of estimated r squared and
 log(beta1\*beta0\` is about 0.91 and 2.02 respectively.
+
+``` r
+quantile(clean_df$r_squared,c(0.025,0.975))
+```
+
+    ##      2.5%     97.5% 
+    ## 0.8942877 0.9272458
+
+``` r
+quantile(clean_df$log_beta12,c(0.025,0.975))
+```
+
+    ##     2.5%    97.5% 
+    ## 1.966820 2.059444
+
+The 95% confidence interval for r squared is (0.8942877, 0.9272458).
+
+The 95% confidence interval for log(beta1\*beta0) is (1.9668198,
+2.0594439).
