--- a/p8105_hw6_yl4358.md
+++ b/p8105_hw6_yl4358.md
@@ -57,7 +57,8 @@ day during pregnancy as predictor variables. Because baby’s birth weight
 is highly related with the mother’s health status, I choose `delwt` and
 `smoken` which represents mother’s health status during pregnancy.
 According to common sense, the taller the baby is , the heavier the baby
-is, thus I also choose `blength`.
+is, thus I also choose `blength`. And accoding to their p-value, the
+results are all significant. Therefore I build this model.
 
 ``` r
 birthweight_df %>% 
@@ -70,7 +71,7 @@ birthweight_df %>%
 <img src="p8105_hw6_yl4358_files/figure-gfm/unnamed-chunk-2-1.png" width="90%" />
 
 According to the plot, the residuals of this model have an average about
-0 and constant variance.
+0 and non constant variance. And there are some outliers.
 
 ``` r
 fit1 = lm(bwt ~ blength + gaweeks, data = birthweight_df)
@@ -97,7 +98,10 @@ cv_df %>%
     names_to = "model", 
     values_to = "rmse",
     names_prefix = "rmse_") %>% 
-  mutate(model = fct_inorder(model)) %>% 
+  mutate(
+    model = recode(model, "fit1" = "main effects", "fit2" = "interaction"),
+    model = fct_inorder(model)
+    ) %>% 
   ggplot(aes(x = model, y = rmse)) + geom_violin()
 ```
 
@@ -190,16 +194,16 @@ quantile(clean_df$r_squared,c(0.025,0.975))
 ```
 
     ##      2.5%     97.5% 
-    ## 0.8942877 0.9272458
+    ## 0.8937751 0.9272885
 
 ``` r
 quantile(clean_df$log_beta12,c(0.025,0.975))
 ```
 
     ##     2.5%    97.5% 
-    ## 1.966820 2.059444
+    ## 1.964858 2.058682
 
-The 95% confidence interval for r squared is (0.8942877, 0.9272458).
+The 95% confidence interval for r squared is (0.8937751, 0.9272885).
 
-The 95% confidence interval for log(beta1\*beta0) is (1.9668198,
-2.0594439).
+The 95% confidence interval for log(beta1\*beta0) is (1.9648581,
+2.0586824).
